--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           name: hello-artifact
           path: ./artifacts
-      - name: Display the ontent
+      - name: Display content of the text file
         run: cat ./artifacts/hello.txt
-        
+
     
